syntax = "proto3";

import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";

package com.example;

option java_outer_classname = "MyAction";

message MyRequest {
    int32 value = 1;
}

message Response {
    int32 value = 1;
}

service MyActionService {
    option (akkaserverless.service) = {
        type : SERVICE_TYPE_ACTION
    };

    rpc SingleMethod(MyRequest) returns (Response);
    rpc StreamedMethod(MyRequest) returns (stream Response);
}
